# Urdf_testing

my_robot_bringup/: CMakeLists.txt  package.xml
my_robot_bringup/launch/: cartesian.sim.launch.py  my_cobot.control.launch.py  my_cobot.gazebo.launch.py
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/launch/: test.py
my_robot_description/urdf/: my_cobot.cartesian.xacro  my_cobot.ros2_control.xacro  my_cobot.urdf.xacro  my_cobot.xacro
