<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_bringup</name>
  <version>0.0.0</version>
  <description>abc</description>
  <maintainer email="ngoc.ngocquy@gmail.com">qy</maintainer>
  <license>Apache License 2.0</license>
  <author email="ngoc.ngocquy@gmail.com">qy</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>my_robot_description</exec_depend>
  <depend>cartesian_controller_base</depend> <!-- ros2 version configuration -->
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
